@@ -39,7 +39,7 @@ li.milestone {
     margin-right: 10px;
   }
 
-  .time-elapsed {
+  .remaining-days {
     color: $orange-light;
   }
 }
