@@ -110,17 +110,10 @@ class Milestone < ActiveRecord::Base
     0
   end
 
-  # Returns the elapsed time (in percent) since the Milestone creation date until today.
-  # If the Milestone doesn't have a due_date then returns 0 since we can't calculate the elapsed time.
-  # If the Milestone is overdue then it returns 100%.
-  def percent_time_used
-    return 0 unless due_date
-    return 100 if expired?
+  def remaining_days
+    return 0 if !due_date || expired?
 
-    duration = ((created_at - due_date.to_datetime) / 1.day)
-    days_elapsed = ((created_at - Time.now) / 1.day)
-
-    ((days_elapsed.to_f / duration) * 100).floor
+    (due_date - Date.today).to_i
   end
 
   def expires_at
